--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Netflix Theme",
-    "description": "A custom Jellyfin theme inspired by Netflix, merged with Finality's layout for stability. Features horizontal scrolling rows, responsive mobile view, and hover effects.",
-    "version": "1.1.0",
+    "name": "Netflix + Finality Theme",
+    "description": "A Jellyfin theme combining Netflix's style with Finality's layout. Updated for modern Jellyfin versions with horizontal scrolling rows, hover effects, and mobile-friendly design.",
+    "version": "1.2.0",
     "author": "iiTzMYUNG",
     "targetAbi": "10.8.0.0",
-    "id": "jellyfin.theme.netflixfinality",
+    "id": "jellyfin.theme.netflixfinality.updated",
     "category": "Theme",
     "type": "css",
     "sourceUrl": "https://github.com/iiTzMYUNG/jellyfin-netflix-theme",
